<resources>
    <string name="app_name">Todo App</string>
    <string name="copy">Copy</string>
    <string name="edit">Edit</string>

    <string name="delete">Delete</string>
    <string name="new_task">new task</string>
    <string name="reminder_set_c">Task Set</string>

    <string name="notification_title">Reminder</string>
    <string name="title">Title</string>
    <string name="save">SAVE</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="setting">Setting</string>
    <string name="category">Category</string>
    <string name="cancel">
        cancel
    </string>

    <string name="msg_task_insert_done">
        Your Task saved
    </string>
    <string name="msg_empty_data">
        You must fill in the data first
    </string>
    <string name="This_field_is_required">
        This field is required
    </string>
    <string name="add_reminder"> Add new Reminder </string>
    <string name="error_insert"> Error : this Item not Saved try again </string>
    <string name="msg_newCategory_saved">
        Your category is saved
    </string>
    <string name="confirm_title"> Confirmation </string>
    <string name="msg_confirm_delete_item">
        Are you sure you want to delete this item
    </string>
    <string name="msg_delete_item">itme deleted</string>
    <string name="update_category_title">edit category name</string>
    <string name="msg_update_item"> edit category name done </string>
    <string name="title_activity_start_page">StartPageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>